--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.7.2",
+    "firebase": "^8.10.0",
     "joi": "^17.6.0",
     "json-server": "^0.17.0",
     "react": "^17.0.2",
